[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warp-tpe-sampler"            # PyPI-имя (рекомендую через дефисы)
version = "0.1.1"
description = "WarpTpeSampler: Cached TPE + embedded budget policy for Optuna"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Mikhail Tovarnov" }]

dependencies = [
  "optuna>=4.1,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.4",
  "build",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
